# examples-ghc-eight

./: .gitignore  Chatbot.hs  GenericLens.hs  LICENSE  Main_GenericLens.hs  Main_TextZipper.hs  Main_Validation.hs  README.md  TextZipper.hs  Validation.hs  default.nix  document.bat  examples-ghc-eight.cabal  execute-validation.bat  shell.nix  stack.yaml  watch.bat
