name:                examples-ghc-eight
version:             0.0.0
synopsis:            simple examples for libraries, patterns, and extensions (GHC 8.2).
description:         simple examples for libraries, patterns, and extensions (GHC 8.2).
homepage:            http://github.com/sboosali/examples-ghc-eight#readme
license:             BSD3
license-file:        LICENSE
author:              Spiros Boosalis
maintainer:          samboosalis@gmail.com
copyright:           2017 Spiros Boosalis
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  README.md
  stack.yaml

-- data-files:
--  data/

source-repository head
  type:     git
  location: https://github.com/sboosali/examples-ghc-eight

library
 hs-source-dirs:      .
 default-language:    Haskell2010
 ghc-options:
  -Wall
  -- disable
  -fno-warn-unticked-promoted-constructors
  -- enable
  -fwarn-incomplete-uni-patterns
  -fwarn-incomplete-record-updates
  -fwarn-identities
  -fwarn-missing-fields
  -Wnoncanonical-monad-instances 

 default-extensions: AutoDeriveTypeable DeriveDataTypeable DeriveGeneric
                     DeriveFunctor DeriveFoldable DeriveTraversable
                     LambdaCase EmptyCase TypeOperators PostfixOperators
                     ViewPatterns BangPatterns KindSignatures
                     NamedFieldPuns RecordWildCards TupleSections
                     MultiWayIf DoAndIfThenElse EmptyDataDecls
                     MultiParamTypeClasses FlexibleContexts FlexibleInstances
                     TypeFamilies FunctionalDependencies
                     ScopedTypeVariables StandaloneDeriving

 exposed-modules:
               Validation 

 build-depends:
               base >=4.7 && <5

--             , spiros
             , either

executable example-validation 
 hs-source-dirs:      .
 main-is:             Main_Validation.hs
 other-modules:
               Validation 

 default-language:    Haskell2010
 ghc-options:
  -fno-warn-missing-signatures

 default-extensions: AutoDeriveTypeable DeriveDataTypeable DeriveGeneric
                     DeriveFunctor DeriveFoldable DeriveTraversable
                     LambdaCase EmptyCase TypeOperators PostfixOperators
                     ViewPatterns BangPatterns KindSignatures
                     NamedFieldPuns RecordWildCards TupleSections
                     MultiWayIf DoAndIfThenElse EmptyDataDecls
                     MultiParamTypeClasses FlexibleContexts FlexibleInstances
                     TypeFamilies FunctionalDependencies
                     ScopedTypeVariables StandaloneDeriving

 build-depends:
               base >=4.7 && <5
             , examples-ghc-eight

             , either
